# tmux

./: .gitignore  Makefile.am  cmd-plugin.c  cmd.c  configure.ac  events-payload.c  input.c  notify.c  plugin-async.c  plugin-events.c  plugin-internal.h  plugin-json.c  plugin-vtable.c  plugin.c  server-client.c  server.c  session.c  tmux.1  tmux.h  window.c
plugin-host/: ABI.md  Cargo.toml  WRITING-PLUGINS.md
plugin-host/abi-types/: Cargo.toml
plugin-host/abi-types/src/: lib.rs
plugin-host/examples/git-status/: Cargo.toml  git_status.toml
plugin-host/examples/git-status/src/: lib.rs
plugin-host/examples/hello-raw/: Cargo.toml
plugin-host/examples/hello-raw/src/: lib.rs
plugin-host/examples/notify-toast/: Cargo.toml
plugin-host/examples/notify-toast/src/: lib.rs
plugin-host/examples/ticker/: Cargo.toml
plugin-host/examples/ticker/src/: lib.rs
plugin-host/host/: Cargo.toml  cbindgen.toml
plugin-host/host/src/: abi.rs  caps.rs  dispatch.rs  engine.rs  events.rs  ffi.rs  hostlog.rs  lib.rs  registry.rs  reload.rs  state.rs  tokens.rs
plugin-host/host/tests/: interleave.rs  lifecycle.rs
plugin-host/include/: plugin-host.h
plugin-host/sdk/: Cargo.toml
plugin-host/sdk/src/: api.rs  executor.rs  ids.rs  lib.rs  runtime.rs
